--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -26,6 +26,11 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+      with:
+        gradle-version: '7.6.3'
+
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
       with:
