--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "com.n90.myinput",
   "displayName": "MyInput",
   "version": "1.0.0",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
+  "description": "A sample Apache Cordova application for data management with dark mode and export functionality.",
   "main": "index.js",
   "scripts": {
+    "start": "cordova run android",
+    "build": "cordova build android",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "ecosystem:cordova"
+    "ecosystem:cordova",
+    "cordova",
+    "android",
+    "file",
+    "export"
   ],
-  "author": "Apache Cordova Team",
+  "author": "Naufal90",
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^12.0.1",
-    "cordova-plugin-file": "^7.0.0",
-    "cordova-plugin-x-socialsharing": "^6.0.4",
     "es6-promise-plugin": "^4.2.2"
   },
   "cordova": {
@@ -23,10 +27,12 @@
       "cordova-plugin-file": {
         "ANDROIDX_WEBKIT_VERSION": "1.4.0"
       },
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-dialogs": {} 
     },
     "platforms": [
       "android"
     ]
   }
-}
+  }
